--- a/package.json
+++ b/package.json
@@ -5,14 +5,7 @@
   "author": "Michael Große <mic.grosse@googlemail.com>",
   "license": "GPL-2",
   "devDependencies": {
-    "eslint": "^5.16.0",
-    "husky": "^2.4.0",
-    "prettier": "1.18.2",
-    "pretty-quick": "^1.11.0"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "eslint app && pretty-quick --staged"
-    }
+    "eslint": "^8.47.0",
+    "prettier": "3.0.1"
   }
 }
