--- a/package.json
+++ b/package.json
@@ -7,5 +7,11 @@
   "devDependencies": {
     "eslint": "^8.47.0",
     "prettier": "3.0.1"
+  },
+  "scripts": {
+    "deployAll": "node scripts/uploadToWiki.js"
+  },
+  "dependencies": {
+    "mwbot": "^2.1.3"
   }
 }
