--- a/package.json
+++ b/package.json
@@ -5,13 +5,19 @@
   "author": "Michael Große <mic.grosse@googlemail.com>",
   "license": "GPL-3.0-or-later",
   "devDependencies": {
+    "@vitejs/plugin-vue": "^4.2.3",
+    "vite": "^4.4.9",
+    "vite-plugin-commonjs": "^0.8.2",
     "eslint": "^8.47.0",
     "prettier": "3.0.1"
   },
   "scripts": {
+    "dev": "vite --open",
     "deployAll": "node scripts/uploadToWiki.js"
   },
   "dependencies": {
-    "mwbot": "^2.1.3"
+    "@wikimedia/codex": "^0.16.1",
+    "mwbot": "^2.1.3",
+    "vue": "^3.3.4"
   }
 }
