--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "module",
   "name": "mediawiki_userscripts",
   "description": "My mediawiki userscripts",
   "repository": "git@github.com:micgro42/mediawiki_userscripts.git",
@@ -6,10 +7,10 @@
   "license": "GPL-3.0-or-later",
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
-    "vite": "^4.4.9",
-    "vite-plugin-commonjs": "^0.8.2",
     "eslint": "^8.47.0",
-    "prettier": "3.0.1"
+    "prettier": "3.0.1",
+    "vite": "^4.4.9",
+    "vite-plugin-commonjs": "^0.8.2"
   },
   "scripts": {
     "dev": "vite --open",
@@ -17,7 +18,7 @@
   },
   "dependencies": {
     "@wikimedia/codex": "^0.16.1",
-    "mwbot": "^2.1.3",
+    "m3api": "^0.8.0",
     "vue": "^3.3.4"
   }
 }
