Skip deploy on merge due to global open proxy block :/

--- a/.github/workflows/deployToTest.yml
+++ b/.github/workflows/deployToTest.yml
@@ -14,6 +14,7 @@ jobs:
         run: yarn install
 
       - name: Deploy 🚀
+        if: false # GitHub affected global Open Proxy block 😢
         env:
           BOT_USER: ${{ secrets.BOT_USER }}
           BOT_PASS: ${{ secrets.BOT_PASS }}
