Don't auto-open the dev page
Restarting the dev server is occasionally needed to make sure that all
files are picked up. It reopening the dev-page is annoying.

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "vite-plugin-commonjs": "^0.8.2"
   },
   "scripts": {
-    "dev": "vite --open",
+    "dev": "vite",
     "deployAll": "node scripts/uploadToWiki.js"
   },
   "dependencies": {
