--- a/package.json
+++ b/package.json
@@ -20,6 +20,6 @@
     "@wikimedia/codex": "^0.16.1",
     "m3api": "^0.8.0",
     "pinia": "^2.1.7",
-    "vue": "^3.3.4"
+    "vue": "3.3.9"
   }
 }
