--- a/package.json
+++ b/package.json
@@ -6,19 +6,19 @@
   "author": "Michael Große <mic.grosse@googlemail.com>",
   "license": "GPL-3.0-or-later",
   "devDependencies": {
-    "@vitejs/plugin-vue": "^4.2.3",
-    "eslint": "^8.47.0",
-    "prettier": "3.0.1",
-    "vite": "^4.4.9",
-    "vite-plugin-commonjs": "^0.8.2"
+    "@vitejs/plugin-vue": "^5.0.4",
+    "eslint": "^8.56.0",
+    "prettier": "^3.2.5",
+    "vite": "^5.1.1",
+    "vite-plugin-commonjs": "^0.10.1"
   },
   "scripts": {
     "dev": "vite",
     "deployAll": "node scripts/uploadToWiki.js"
   },
   "dependencies": {
-    "@wikimedia/codex": "^0.16.1",
-    "m3api": "^0.8.0",
+    "@wikimedia/codex": "^1.3.2",
+    "m3api": "^0.8.1",
     "pinia": "^2.1.7",
     "vue": "3.3.9"
   }
