--- a/package.json
+++ b/package.json
@@ -8,18 +8,24 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
     "eslint": "^8.56.0",
+    "husky": ">=6",
+    "lint-staged": ">=10",
     "prettier": "^3.2.5",
     "vite": "^5.1.1",
     "vite-plugin-commonjs": "^0.10.1"
   },
   "scripts": {
     "dev": "vite",
-    "deployAll": "node scripts/uploadToWiki.js"
+    "deployAll": "node scripts/uploadToWiki.js",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@wikimedia/codex": "^1.3.2",
     "m3api": "^0.8.1",
     "pinia": "^2.1.7",
     "vue": "3.3.9"
+  },
+  "lint-staged": {
+    "*.{js,css,md}": "prettier --write"
   }
 }
