Add tests for require.js and run them in CI

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,6 +12,14 @@ install:
     paths:
       - node_modules
 
+test:
+  stage: test
+  script:
+    - yarn test
+  artifacts:
+    paths:
+      - node_modules
+
 publishToTest:
   stage: deploy
   script:
