--- a/package.json
+++ b/package.json
@@ -7,15 +7,19 @@
   "license": "GPL-3.0-or-later",
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
+    "@vitest/coverage-v8": "^1.3.1",
     "eslint": "^8.56.0",
     "husky": ">=6",
+    "jsdom": "^24.0.0",
     "lint-staged": ">=10",
     "prettier": "^3.2.5",
     "vite": "^5.1.1",
-    "vite-plugin-commonjs": "^0.10.1"
+    "vite-plugin-commonjs": "^0.10.1",
+    "vitest": "^1.3.1"
   },
   "scripts": {
     "dev": "vite",
+    "test": "vitest",
     "deployAll": "node scripts/uploadToWiki.js",
     "prepare": "husky install"
   },
