Improve linting (but not green yet)
What remains red are the global usages in three files. Those should
actually be refactored out. That will happen in follow-up commits, and
those will then also add the pre-commit hook and the ci implementation.

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "scripts": {
     "dev": "vite",
     "test": "vitest",
+    "lint": "eslint .",
     "deployAll": "node scripts/uploadToWiki.js",
     "prepare": "husky install"
   },
