Run prettier against all files
except a few files and file-types for which no parser can be inferred or
it does not make sense.

Also adds a script shortcut to make it easier and faster to run it
manually.

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dev": "vite",
     "test": "vitest",
     "lint": "eslint .",
+    "p": "prettier . --write --cache --cache-strategy metadata",
     "deployAll": "node scripts/uploadToWiki.js",
     "prepare": "husky install"
   },
@@ -31,7 +32,7 @@
     "vue": "3.3.9"
   },
   "lint-staged": {
-    "*.{js,css,md}": "prettier --write",
+    "*": "prettier --write",
     "*.js": "eslint",
     "*.{js,ts}": "vitest related --run"
   }
