Run eslint and prettier in CI

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,6 +18,8 @@ test:
   script:
     - node --version
     - yarn test
+    - yarn lint
+    - yarn prettier . --list-different
   artifacts:
     paths:
       - node_modules
