--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@wikimedia/codex": "^1.3.4",
+    "@wikimedia/codex": "1.5.0",
     "m3api": "^0.8.1",
     "pinia": "^2.1.7",
     "vue": "3.3.9"
